--- a/templates/should_set_dhcp_server_properties.ps1.erb
+++ b/templates/should_set_dhcp_server_properties.ps1.erb
@@ -4,22 +4,22 @@ $server_properties = (& 'C:\Program Files\Oracle\VirtualBox\vboxmanage' list -l 
   -like 'NetworkName:*<%=@dhcp_netname-%>*' `
   -split '`n'
 
-if(!($adapter_properties -like 'IP:*<%= @dhcp_ipaddress-%>')) {
+if(!($server_properties -like 'IP:*<%= @dhcp_ipaddress-%>')) {
   # IP is incorrect. return 0
   exit 0
 }
 
-if(!($adapter_properties -like 'lowerIPAddress:*<%= @dhcp_lower_ip_range-%>')) {
+if(!($server_properties -like 'lowerIPAddress:*<%= @dhcp_lower_ip_range-%>')) {
   # Lower IP range is incorrect. return 0
   exit 0
 }
 
-if(!($adapter_properties -like 'upperIPAddress:*<%= @dhcp_upper_ip_range-%>')) {
+if(!($server_properties -like 'upperIPAddress:*<%= @dhcp_upper_ip_range-%>')) {
   # Upper IP range is incorrect. return 0
   exit 0
 }
 
-if(!($adapter_properties -like 'Enabled:*True')) {
+if(!($server_properties -like 'Enabled:*Yes')) {
   # not enabled. return 0
   exit 0
 }
