--- a/templates/should_set_adapter_properties.ps1.erb
+++ b/templates/should_set_adapter_properties.ps1.erb
@@ -1,7 +1,7 @@
 $adapter_properties = (& 'C:\Program Files\Oracle\VirtualBox\vboxmanage' list -l hostonlyifs) `
   -join '`n' `
   -split '`n`n' `
-  -like 'Name:*<%= @adapter_name -%>*' `
+  -like 'Name:*<%= @adapter_name %>*' `
   -split '`n'
 
 if(!($adapter_properties -like 'DHCP:*Enabled')) {
@@ -9,7 +9,7 @@ if(!($adapter_properties -like 'DHCP:*Enabled')) {
   exit 0
 }
 
-if(!($adapter_properties -like 'IPAddress:*<%= @dhcp_networkaddress-%>.*')) {
+if(!($adapter_properties -like 'IPAddress:*<%= @dhcp_networkaddress%>.*')) {
   # IP Address does not match the network IP. return 0
   exit 0
 }
