Remove virtualbox_windows::params::vboxmanage_search_paths.
Replace with virtualbox_windows::params::vboxmanage
which can be used to point where vboxmanage.exe is located.

--- a/templates/should_set_adapter_properties.ps1.erb
+++ b/templates/should_set_adapter_properties.ps1.erb
@@ -1,4 +1,4 @@
-$adapter_properties = (& 'C:\Program Files\Oracle\VirtualBox\vboxmanage' list -l hostonlyifs) `
+$adapter_properties = (& '<%= scope['::virtualbox_windows::vboxmanage'] %>' list -l hostonlyifs) `
   -join '`n' `
   -split '`n`n' `
   -like 'Name:*<%= @adapter_name %>*' `
