--- a/templates/should_set_dhcp_server_properties.ps1.erb
+++ b/templates/should_set_dhcp_server_properties.ps1.erb
@@ -1,4 +1,4 @@
-$server_properties = (& 'C:\Program Files\Oracle\VirtualBox\vboxmanage' list -l dhcpservers) `
+$server_properties = (& '<%= scope['::virtualbox_windows::vboxmanage'] %>' list -l dhcpservers) `
   -join '`n' `
   -split '`n`n' `
   -like 'NetworkName:*<%=@dhcp_netname%>*' `
