[WIP] virtualbox_windows::hostonly_network_adapter to become a resource instead of a class so that we can setup more than 1 adapter.
+ Allow setting an adapter ip without having to enable dhcp

--- a/templates/should_create_adapter.ps1.erb
+++ b/templates/should_create_adapter.ps1.erb
@@ -1,4 +1,4 @@
-if((& '<%= scope['::virtualbox_windows::vboxmanage'] %>' list -l hostonlyifs) -like 'Name:*<%= @adapter_name %>*')
+if((& '<%= scope['::virtualbox_windows::vboxmanage'] %>' list -l hostonlyifs) -like 'Name:*<%= @adapter_name %>')
 {
   exit 1
 }
